@@ -1,2 +1,2 @@
 DIST nxplugin-3.0.0-5.i386.tar.gz 13875502 RMD160 f2faa7dbab4e869a04ee059cc1bd25299b6cc7de SHA1 ea2fa4ee84ef8227a6f125343568b679296be116 SHA256 6e0801cf80084450d22a3558a22879179aeed215c7dad827f32f750d10d914e5
-EBUILD nxweb-3.0.0.ebuild 1004 RMD160 652f2c1ed4661cc0e5a79252fdd3926e094493a5 SHA1 46e7f2917da67a3ebc53fccc648f7c51e13d3298 SHA256 cbf5fe1c32d9936d0bb3dd3810e6c3f3369334c68c8558f89433ad4212a44430
+EBUILD nxweb-3.0.0.ebuild 1006 RMD160 c89b67dca4c570d1e1628075de1520d0fc779393 SHA1 8941cfa3ab65affecee36d9a74a644e969aa7624 SHA256 6949624f8f061c387ce42732da5c36b849be5a9692d347b5ebfdcaadd87eb618
