@@ -1,2 +1,2 @@
 DIST x2goldaptools_2.0.1-8_all.deb 17658 RMD160 79d1b7cd0925ec55ab9e6e5734a3dc8bf0fcb26e SHA1 1612f09c8ebcb71263c5b9f0ee344d971ef02401 SHA256 d4b2c11779e761692dd040f641d57edcc15be60f40b73507f684f138f86f8240
-EBUILD x2goldaptools-2.0.1.8.ebuild 1346 RMD160 2fbf711e28308873c50b54fc86eb6c92db99b730 SHA1 cbba37625518985ef2984b9286bec111d0291cb1 SHA256 f5677739c9ab74d35b5b31a3970de7f7e149e2a7ff0e46a4b8810109065e413b
+EBUILD x2goldaptools-2.0.1.8.ebuild 1392 RMD160 4461e7aaec4f77ff85567cc7515b884a589d249e SHA1 dc5c6ad942d6667c982fdd3cebb71a94d51c4282 SHA256 937d392cd7bdb34b73fd753eda6ece11c66008d1b555e34445b0418cd82f7037
