@@ -1,5 +1,5 @@
 AUX x2goserver.init 493 RMD160 439888c465f19433dc4ca42193eaefc5bd2d793c SHA1 3fc7dd4252b500895cd7b56efa29849014bf3741 SHA256 981ca3e263c5a4db6776d44f6caccf3a1f0d976459d610a1ca851990c9e27747
 DIST x2goserver_2.0.1-16_all.deb 13282 RMD160 534edd191763b8ac06ee10f83beb84198cc6b597 SHA1 a853ebb6251297e8585d53ea0a4fdfec27050312 SHA256 29bf3698f1a9663e7935d11d51960488f368b466dce47f0c7fa74f6a859270f9
-EBUILD x2goserver-2.0.1.16.ebuild 1534 RMD160 b5b53cca95cdf52a36b2313ce433c27010d685ac SHA1 4781de66a15e992b70a65a4a45f79b769feb5a9c SHA256 5137b98791929c1a9e7e2c36e6353950188262c530fef89ec4169fedf1530bcc
-MISC ChangeLog 418 RMD160 d7fb5db6b93f5707f0402df3c3f3589289308c28 SHA1 8c256a0ed443fd66453b9783fdbaef051bccb203 SHA256 f661747fdb7cf55b84f0c9d44dfada17380e7240f2bffa957bdebb98138c508f
+EBUILD x2goserver-2.0.1.16.ebuild 1723 RMD160 b8bce1018b13defa02c67ecb66ce22a3cdcd9fee SHA1 26ce63cf85bd8dbfb3c02dd18534e86e8a75d58f SHA256 d10ddef4322cf7894abb98ec8b314e31c56b3ea03fb03bf3e842f1050d813e23
+MISC ChangeLog 684 RMD160 0863db42b5601dad9309026596c8351a309bd42b SHA1 ddaef3fa042f5c58e96ed27215b0455bffe2d44e SHA256 ec7c27a24e2a69ee4e492a62de3578f76ec7521286804c420cbc2aecceade238
 MISC metadata.xml 307 RMD160 0172cd4fc792a41fde528ec788ab0dd98f3d21bc SHA1 953412d99904e25f4845fdfda587298e7cbc7f2a SHA256 b19b0330b6614bc27421032b94f6ade24661e38c818140c598d50cb91e82bce6
